Bug 38314 - [Qt] REGRESSION(r57982): tst_qwebpage::showModalDialog() crashes
Summary: [Qt] REGRESSION(r57982): tst_qwebpage::showModalDialog() crashes
Status: CLOSED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit Qt (show other bugs)
Version: 528+ (Nightly build)
Hardware: All All
: P1 Blocker
Assignee: Simon Hausmann
URL:
Keywords: Qt
Depends on:
Blocks: 35784
  Show dependency treegraph
 
Reported: 2010-04-29 01:33 PDT by Simon Hausmann
Modified: 2010-04-29 04:38 PDT (History)
1 user (show)

See Also:


Attachments
Patch (1.57 KB, patch)
2010-04-29 01:35 PDT, Simon Hausmann
vestbo: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Simon Hausmann 2010-04-29 01:33:32 PDT
r57982 caused the showModalDialog() unit test to regress/crash.

This is caused by not always calling mainFrame() anymore, inside ChromeClientQt::createWindow. When returning from that function WebCore expects that a main frame exists.
Comment 1 Simon Hausmann 2010-04-29 01:35:52 PDT
Created attachment 54684 [details]
Patch
Comment 2 Simon Hausmann 2010-04-29 01:42:20 PDT
Committed r58485: <http://trac.webkit.org/changeset/58485>
Comment 3 Simon Hausmann 2010-04-29 01:44:48 PDT
Revision r58485 cherry-picked into qtwebkit-2.0 with commit 52345b219c57e8986cd399c148d85b7909a1dd6e
Comment 4 Yi Shen 2010-04-29 04:38:58 PDT
Sorry Simon, my patch causes the crash :( I will be careful next time