[Qt] REGRESSION(r57982): tst_qwebpage::showModalDialog() crashes https://bugs.webkit.org/show_bug.cgi?id=38314

Reviewed by Tor Arne Vestbø.

Make sure that there's always a main frame when returning from createWindow()
to the caller in WebCore.

* WebCoreSupport/ChromeClientQt.cpp:
(WebCore::ChromeClientQt::createWindow):

Canonical link: https://commits.webkit.org/49740@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@58485 268f45cc-cd09-0410-ab3c-d52691b4dbfc